Fix layout issues for iphone

--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,28 @@
   color: #eee;
 }
 
+.site-layout {
+  padding: 0 50px;
+  margin-top: 32px;
+  text-align: center;
+}
+
 .question-card {
   background: #fff;
   padding: 24px;
-  min-height: 380px;
-  width: 400px;
-  margin: 10px auto;
+  min-height: 200px;
+  min-width: 220px;
+  margin: 0 auto;
   text-align: center;
 }
 
 .question-card button.answer {
   width: 100%;
-  height: 4em;
+  height: 6em;
 }
 
 .question-card button.action {
   width: 100%;
+  height: 4em;
 }
 
